<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidNotes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_detail">NoteDetailActivity</string>
    <string name="action_sync">Sync</string>
    <string name="action_logout">Log out</string>
    <string name="action_full_sync">Full Sync</string>
    <string name="syncing">Syncing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_show_checkbox">Show Checkboxes</string>
    <string name="action_hide_checkbox">Hide Checkboxes</string>
    <string name="action_delete_note">Delete Note</string>
    <string name="action_clear_completed">Clear Completed Todo Items</string>
    <string name="action_rename_title">Rename Title</string>

</resources>
