<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="simpzan.android.notes.ui.NoteDetailActivity" >
    <item android:id="@+id/action_rename_title"
        android:title="@string/action_rename_title"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_delete_note"
        android:title="@string/action_delete_note"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_show_checkbox"
        android:title="@string/action_show_checkbox"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_hide_checkbox"
        android:title="@string/action_hide_checkbox"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
