<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NoteListActivity" >
    <item android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_full_sync"
        android:title="@string/action_full_sync"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
